# rglike

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build_and_run
data/: .eslintrc.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
data/__tests__/: example.spec.ts
data/base/: books.lua  colors.lua  factions.lua  items.lua  mobs.lua
data/lua/: i18n.lua  lualib_bundle.lua
data/lua/base/: books.lua  colors.lua  factions.lua  items.lua  spells.lua  vendors.lua
data/lua/base/strings/: index.lua
data/lua/mods/: mods.lua
data/src/: rglike.d.ts
data/src/base/: books.ts  colors.ts  factions.ts  items.ts  spells.ts  vendors.ts
data/src/base/strings/: index.ts
data/src/i18n/: ast.ts  builtins.ts  bundle.ts  index.ts  memoizer.ts  resolver.ts  resource.ts  scope.ts  types.ts
data/src/mods/: mods.ts
data/strings/base/: en-US.ftl
data/strings/base/en-US/: gui.ftl
docs/: CMakeLists.txt  mainpage.md
game/: CMakeLists.txt  game.cpp
include/rglike/: constants.hpp  game.hpp  game_log.hpp  lib.hpp  rglike.hpp  scene.hpp  world.hpp
libs/: CMakeLists.txt
libs/fluency/: Cargo.toml  build.rs  cbindgen.toml
libs/fluency/include/: fluency.hpp
libs/fluency/src/: lib.rs
libs/fluent/: CMakeLists.txt
libs/fluent/include/fluent/: ast.hpp  bundle.hpp  fluent.hpp  resource.hpp  types.hpp
libs/fluent/src/: fluent.cpp  resource.cpp
libs/rglike/: CMakeLists.txt
libs/rglike/include/rglike/: formatting.hpp
libs/rglike/src/: formatting.cpp  game.cpp  game_log.cpp  game_log.hpp  game_scene.cpp  game_scene.hpp  main_menu_scene.hpp  math.cpp  math.hpp  world.cpp  world.hpp
libs/rglike/src/ui/: log_component.cpp  log_component.hpp  world_component.cpp
src/: CMakeLists.txt  game.cpp  game_log.cpp  game_log.hpp  game_scene.cpp  game_scene.hpp  lib.cpp  main_menu_scene.cpp  main_menu_scene.hpp  world.cpp  world.hpp
src/components/: log_component.cpp  log_component.hpp
src/ui/: world_component.hpp
tests/: CMakeLists.txt  testlib.cpp
