[package]
name = "fluency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["staticlib"]

[dependencies]
fluent = "0.16.0"
fluent-syntax = "0.11.0"
intl-memoizer = "0.5.1"
unic-langid = "0.9.1"

[build-dependencies]
cbindgen = "0.24.5"
